# qtrg

./: CMakeLists.txt  README.md  data.txt  edit.cpp  edit.h  edit.ui  maidata.txt  main.cpp  music.cpp  music.h  note_generator.cpp  note_generator.h  options.cpp  options.h  options.ui  rg.cpp  rg.h  rg.ui  rg_mainmenu.cpp  rg_mainmenu.h  rg_mainmenu.ui  select.cpp  select.h  select.ui  track.txt
songs/: Cyaegha.txt  songinfo.txt  track.txt
